--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,60 @@
 annotated-types==0.7.0
-appnope==0.1.4
-asttokens==2.4.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
-comm==0.2.2
-contourpy==1.3.0
-cycler==0.12.1
-debugpy==1.8.7
-decorator==5.1.1
 docker-pycreds==0.4.0
-eval_type_backport==0.2.0
-exceptiongroup==1.2.2
-executing==2.1.0
 filelock==3.16.1
-fonttools==4.54.1
 fsspec==2024.10.0
 gitdb==4.0.11
 GitPython==3.1.43
+huggingface-hub==0.26.5
 idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-ipykernel==6.29.5
-ipython==8.18.1
-jedi==0.19.1
 Jinja2==3.1.4
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kagglehub==0.3.3
-kiwisolver==1.4.7
+joblib==1.4.2
+kagglehub==0.3.4
+lightning-utilities==0.11.9
 MarkupSafe==3.0.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
 mpmath==1.3.0
-nest-asyncio==1.6.0
-networkx==3.2.1
-numpy==2.0.2
-opencv-python==4.10.0.84
-packaging==24.1
-parso==0.8.4
-pexpect==4.9.0
+networkx==3.4.2
+numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.2
 pillow==11.0.0
 platformdirs==4.3.6
-prompt_toolkit==3.0.48
 protobuf==5.29.1
 psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
 pydantic==2.10.3
 pydantic_core==2.27.1
-Pygments==2.18.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
 PyYAML==6.0.2
-pyzmq==26.2.0
 requests==2.32.3
-scipy==1.13.1
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
 sentry-sdk==2.19.2
 setproctitle==1.3.4
-SimpleITK==2.4.0
-SimpleITK-SimpleElastix==2.0.2rc2.dev788
-six==1.16.0
+six==1.17.0
 smmap==5.0.1
-stack-data==0.6.3
 sympy==1.13.1
+tabulate==0.9.0
+threadpoolctl==3.5.0
+timm==1.0.12
 torch==2.5.1
+torchaudio==2.5.1
+torchmetrics==1.6.0
 torchvision==0.20.1
-tornado==6.4.1
-tqdm==4.66.6
-traitlets==5.14.3
+tqdm==4.67.1
+triton==3.1.0
 typing_extensions==4.12.2
 urllib3==2.2.3
 wandb==0.19.0
-wcwidth==0.2.13
-zipp==3.20.2
