--- a/train/configs/train.yaml
+++ b/train/configs/train.yaml
@@ -13,28 +13,29 @@ DATASET:
     "/workspace/a-eye-lab-research/dataset/data/C003",
     "/workspace/a-eye-lab-research/dataset/data/Cataract_Detection-using-CNN",
     "/workspace/a-eye-lab-research/dataset/data/Cataract-Detection-and-Classification",
-    "/workspace/a-eye-lab-research/dataset/data/kaggle_cataract_kersh",
-    "/workspace/a-eye-lab-research/dataset/data/kaggle_cataract_nand"
+    # "/workspace/a-eye-lab-research/dataset/data/kaggle_cataract_aksh",
+    "/workspace/a-eye-lab-research/dataset/data/kaggle_cataract_kersh"
+    # "/workspace/a-eye-lab-research/dataset/data/kaggle_cataract_nand"
   ]
   NUM_WORKERS   : 16
   N_FOLDS       : 5
 
 TRAIN: 
   BATCH_SIZE    : 128    
-  EPOCHS        : 200    
-  PATIENCE      : 10     
+  EPOCHS        : 100    
+  PATIENCE      : 5     
   AMP           : True   
 
 LOSS:
   NAME: CrossEntropyLoss
 
 OPTIMIZER:
-  NAME: Adam
+  NAME: AdamW
   lr: 0.001             
   weight_decay: 0.0001  
 
 SCHEDULER:
-  scheduler_name: 'ReduceLROnPlateau' 
+  scheduler_name: 'ReduceLROnPlateau'
   mode: 'max'
   factor: 0.1
   patience: 5
