--- a/train/configs/train.yaml
+++ b/train/configs/train.yaml
@@ -2,28 +2,29 @@ DEVICE: cuda
 RANDOM_SEED: 321
 
 MODEL:
-  NAME          : 'ViT_Large'
+  NAME          : 'FastViT'
   NUM_CLASSES   : 2
   PRETRAINED    : True
 
 DATASET:
   TRAIN_DATA_DIR: [
-    "/workspace/a-eye-lab-research/dataset/data/C001",
-    "/workspace/a-eye-lab-research/dataset/data/C002",
-    "/workspace/a-eye-lab-research/dataset/data/C003",
-    "/workspace/a-eye-lab-research/dataset/data/Cataract_Detection-using-CNN",
-    "/workspace/a-eye-lab-research/dataset/data/Cataract-Detection-and-Classification",
-    # "/workspace/a-eye-lab-research/dataset/data/kaggle_cataract_aksh",
-    "/workspace/a-eye-lab-research/dataset/data/kaggle_cataract_kersh"
-    # "/workspace/a-eye-lab-research/dataset/data/kaggle_cataract_nand"
+    "/workspace/a-eye-lab-research/data2/C001",
+    "/workspace/a-eye-lab-research/data2/C002",
+    "/workspace/a-eye-lab-research/data2/C003",
+    "/workspace/a-eye-lab-research/data2/Cataract_Detection-using-CNN",
+    "/workspace/a-eye-lab-research/data2/Cataract-Detection-and-Classification",
+    # "/workspace/a-eye-lab-research/data2/kaggle_cataract_aksh",
+    "/workspace/a-eye-lab-research/data2/kaggle_cataract_kersh",
+    "/workspace/a-eye-lab-research/data2/kaggle_cataract_nand"
   ]
+  TEST_DATA_DIR: "/workspace/a-eye-lab-research/dataset/real_data"
   NUM_WORKERS   : 16
   N_FOLDS       : 5
 
 TRAIN: 
-  BATCH_SIZE    : 128    
+  BATCH_SIZE    : 64    
   EPOCHS        : 100    
-  PATIENCE      : 5     
+  PATIENCE      : 20     
   AMP           : True   
 
 LOSS:
@@ -31,15 +32,16 @@ LOSS:
 
 OPTIMIZER:
   NAME: AdamW
-  lr: 0.001             
-  weight_decay: 0.0001  
+  lr: 0.0001
+  betas: [0.9, 0.999]
+  eps: 0.000001
+  weight_decay: 0.0001
 
 SCHEDULER:
-  scheduler_name: 'ReduceLROnPlateau'
-  mode: 'max'
-  factor: 0.1
-  patience: 5
-  min_lr: 0.000001
+  scheduler_name: 'CosineWarmupLR'  # 코사인 애널링 + 웜업 스케줄러로 변경
+  warmup_epochs: 5       # 웜업 에포크 수
+  max_epochs: 100        # 전체 에포크 수 (학습 설정에 맞게 조정 필요)
+  min_lr: 0.000001       # 최소 학습률
 
 SAVE_DIR        : '/workspace/outputs'
 
