--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,64 +1,68 @@
 annotated-types==0.7.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-docker-pycreds==0.4.0
-filelock==3.16.1
-fsspec==2024.10.0
-gitdb==4.0.11
-GitPython==3.1.43
-huggingface-hub==0.26.5
-idna==3.10
-Jinja2==3.1.4
-joblib==1.4.2
-kagglehub==0.3.4
-lightning-utilities==0.11.9
+brotlicffi==1.0.9.2
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.8
+coloredlogs==15.0.1
+contourpy==1.3.0
+cycler==0.12.1
+eval_type_backport==0.2.2
+filelock==3.17.0
+flatbuffers==25.2.10
+fonttools==4.59.0
+fsspec==2025.7.0
+gitdb==4.0.12
+GitPython==3.1.45
+gmpy2==2.2.1
+hf-xet==1.1.5
+huggingface-hub==0.34.1
+humanfriendly==10.0
+idna==3.7
+importlib_resources==6.5.2
+Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.7
+lightning-utilities==0.15.0
 MarkupSafe==3.0.2
+matplotlib==3.9.4
 mpmath==1.3.0
-networkx==3.4.2
-numpy==2.1.3
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-packaging==24.2
-pillow==11.0.0
-platformdirs==4.3.6
-protobuf==5.29.1
-psutil==6.1.0
-pydantic==2.10.3
-pydantic_core==2.27.1
+networkx==3.2.1
+numpy==2.0.1
+onnx==1.18.0
+onnxruntime==1.19.2
+packaging==25.0
+pillow==11.3.0
+pip==25.1
+platformdirs==4.3.8
+protobuf==6.31.1
+pycparser==2.21
+pydantic==2.11.7
+pydantic_core==2.33.2
+pyparsing==3.2.3
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
 PyYAML==6.0.2
-requests==2.32.3
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-sentry-sdk==2.19.2
-setproctitle==1.3.4
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.13.1
+sentry-sdk==2.33.2
+setuptools==78.1.1
 six==1.17.0
-smmap==5.0.1
-sympy==1.13.1
-tabulate==0.9.0
-threadpoolctl==3.5.0
-timm==1.0.12
-torch==2.5.1
-torchaudio==2.5.1
-torchmetrics==1.6.0
-torchvision==0.20.1
+smmap==5.0.2
+sympy==1.13.3
+threadpoolctl==3.6.0
+timm==1.0.19
+torch==2.4.0
+torchaudio==2.4.0
+torchmetrics==1.8.0
+torchvision==0.19.0
 tqdm==4.67.1
-triton==3.1.0
+triton==3.0.0
 typing_extensions==4.12.2
-tzdata==2024.2
-ultralytics==8.3.36
-ultralytics-thop==2.0.12
-urllib3==2.2.3
-zipp==3.20.2
-wandb==0.19.0
+typing-inspection==0.4.1
+urllib3==2.5.0
+wandb==0.21.0
+wheel==0.45.1
+zipp==3.23.0
